# LLMsKnow

./: .gitignore  AGENTS.md  README.md  RESULTS_FORMAT.md  pyproject.toml  repo_tree.txt  requirements.txt  run_sycophancy_bias_probe.py  script.py  ~$hiddeb.pptx
fast_dirty_aqua_mc_mistral7b_instruct_V3/: final_tuples.csv  probe_metadata.json  run_config.json  sampled_responses.csv  sampling_manifest.json  sampling_records.jsonl  status.json  summary_by_question.csv
fast_dirty_aqua_mc_mistral7b_instruct_V4/: final_tuples.csv  probe_metadata.json  run_config.json  sampled_responses.csv  sampling_manifest.json  sampling_records.jsonl  status.json  summary_by_question.csv
fast_dirty_aqua_mc_mistral7b_instruct_V6/: final_tuples.csv  probe_metadata.json  run_config.json  sampled_responses.csv  sampling_manifest.json  sampling_records.jsonl  status.json  summary_by_question.csv
fast_dirty_aqua_mc_mistral7b_instruct_V7/: final_tuples.csv  probe_metadata.json  run_config.json  sampled_responses.csv  sampling_manifest.json  sampling_records.jsonl  status.json  summary_by_question.csv
legacy/: generate_model_answers.py
medium_aqua_mc_mistral7b_instruct_V8/: probe_metadata.json  run_config.json  sampling_manifest.json  status.json  summary_by_question.csv
notebooks/: analysis_20260317.ipynb  analysis_20260317_full_aqua_mc_V10.ipynb  analysis_20260317_full_aqua_mc_V10_v2.ipynb  analysis_20260317_full_aqua_mc_V10_v3.ipynb  analysis_20260317_full_aqua_mc_V10_v4.ipynb  analysis_20260317_full_aqua_mc_V10_v5.ipynb  analysis_20260317_full_aqua_mc_V10_v6.ipynb  (+7 more)
(+723 files in other folders)
